fix buttons alignment in captive portal builder

--- a/src/index.less
+++ b/src/index.less
@@ -1748,11 +1748,6 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
-        button{
-          &:last-child{
-            margin-top: 10px;
-          }
-        }
       }
 
       button {
@@ -1786,6 +1781,10 @@ header {
             background: @w;
             box-shadow: inset 0 1px 1px 1px rgba(0, 0, 0, .5);
           }
+        }
+
+        &.createTemplateBtn {
+          margin-top: 10px;
         }
 
         .font(@avenir-heavy, 14);
